# swagger-petstore-api-automation-testing

./: config.json  conftest.py  pyproject.toml  pytest.ini
Pages/: base_page.py  login_page.py
Report/: report.html
Tests/: test_login.py
Utilities/: read_config.py
